agregando img,contacto, datos

--- a/contact.html
+++ b/contact.html
@@ -15,29 +15,21 @@
 
     <nav>
         <div>
-            <a href="#">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./about.html">About MDLH</a>
-            <a href="./contact.html">contact</a>
+            <a href="#">contact</a>
         </div>
     </nav>
 
     <main>
-        <figure><img src="./imagenes/hockey_1.jpg" alt="imagen de jugadora celebrando"width= 200></figure>
+        <figure>
+            <img src="./imagenes/hockey_3.jpg" alt="imagen de dos niños jugando hockey"width= 200>
+        </figure>
         
         <section>
-            <h2>Upcoming Events</h2>
-            <article>
-                <h3>August 4</h3>
-                <p>MDSL Fundraiser</p>
-            </article>
-            <article>
-                <h3>August 16</h3>
-                <p>Season Kick-off: Meet the Teams</p>
-            </article>
-            <article>
-                <h3>September 1</h3>
-                <p>First Game of the Season (Check Game Schedule for details)</p>
-            </article>
+            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>.</p></p>
+            <p>We reply to your email as soon as we can.
+            </p>
         </section>
     </main>
 </body>
