cambios luego de validacion

--- a/contact.html
+++ b/contact.html
@@ -23,14 +23,14 @@
 
     <main>
         <figure>
-            <img src="./imagenes/hockey_3.jpg" alt="imagen de dos niños jugando hockey"width= 200>
+            <img src="./imagenes/hockey_3.jpg" alt="imagen de dos niños jugando hockey" width="200">
         </figure>
         
-        <section>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>.</p></p>
+        <div>
+            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.
             </p>
-        </section>
+       </div>      
     </main>
 </body>
 </html>
