--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <main>
-        <figure><img src="./imagenes/hockey_1.jpg" alt="imagen de jugadora celebrando"width= 200></figure>
+        <figure><img src="./imagenes/hockey_1.jpg" alt="imagen de jugadora celebrando" width="200"></figure>
         
         <section>
             <h2>Upcoming Events</h2>
