--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League </title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
+        <h2>Upcoming Events</h2>
         <img src="./imagenes/Logo_Mighty_ducks-01.png" alt="logo Mighty Ducks Hockey League" width="100">
     </header>
 
@@ -17,15 +19,14 @@
         <div>
             <a href="#">Home</a>
             <a href="./about.html">About MDLH</a>
-            <a href="./contact.html">contact</a>
+            <a href="./contact.html">Contact</a>
         </div>
     </nav>
 
     <main>
         <figure><img src="./imagenes/hockey_1.jpg" alt="imagen de jugadora celebrando" width="200"></figure>
         
-        <section>
-            <h2>Upcoming Events</h2>
+         <div>
             <article>
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
@@ -38,7 +39,7 @@
                 <h3>September 1</h3>
                 <p>First Game of the Season (Check Game Schedule for details)</p>
             </article>
-        </section>
+         </div>       
     </main>
 </body>
 </html>
