--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <nav>
         <div>
             <a href="./index.html">Home</a>
-            <a href="#">About MDLH</a>
+            <a class="select" href="#">About MDLH</a>
             <a href="./contact.html">Contact</a>
         </div>
     </nav>
