--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav>
         <div>
-            <a href="#">Home</a>
+            <a class="select" href="#">Home</a>
             <a href="./about.html">About MDLH</a>
             <a href="./contact.html">Contact</a>
         </div>
