--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div>
             <a href="./index.html">Home</a>
             <a href="./about.html">About MDLH</a>
-            <a href="#">Contact</a>
+            <a class="select" href="#">Contact</a>
         </div>
     </nav>
 
