--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <title>Mighty Ducks Hockey League </title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/style2.css">
+    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+    <link rel="stylesheet" href="./css/style3.css">
 </head>
 <body>
     <header>
