tabla de game_info

--- a/about.html
+++ b/about.html
@@ -20,6 +20,8 @@
             <a href="./index.html">Home</a>
             <a class="select" href="#">About MDLH</a>
             <a href="./contact.html">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Information</a>
         </div>
     </nav>
 
