--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
             <a href="./index.html">Home</a>
             <a href="./about.html">About MDLH</a>
             <a class="select" href="#">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Information</a>
         </div>
     </nav>
 
