--- a/game_info.html
+++ b/game_info.html
@@ -7,9 +7,102 @@
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style3.css">
-    
+
 </head>
 <body>
-    
+     <header>
+        <h1>Mighty Ducks Hockey League</h1>
+        <h2>Game Information</h2>
+        <img src="./imagenes/Logo_Mighty_ducks-01.png" alt="logo Mighty Ducks Hockey League" width="100">
+    </header>
+
+    <nav>
+        <div>
+            <a href="./index.html">Home</a>
+            <a class="select" href="#">About MDLH</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a class="select" href="#">Information</a>
+        </div>
+    </nav>
+
+    <main class="game">
+        <div>
+            <h2>Mighty Ducks Hockey League</h2>
+      <table>
+        <caption> Fall Schedule</caption>
+        <h3>* All games take place on Saturday</h3>
+        <thead>
+            <tr>
+                <th>SEPTEMBER</th>
+                <th>Teams</th>
+                <th>Location</th>
+                <th>Times</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2"> 9/01 </td>
+                <td>U1 and U4 </td>
+                <td>AJ Katzenmaier</td>
+                <td>9:30 am</td>
+            </tr>
+            <tr>
+                <td>U3 and U2 </td>
+                <td>Greenbay</td>
+                <td>1:00 pm</td>
+            </tr>
+            <tr>
+                <td rowspan="2"> 9/08 </td>
+                <td>U5 and U6 </td>
+                <td>Howard a Yeager</td>
+                <td>9:30 am</td>
+            </tr>
+            <tr>
+                <td>U6 and U1 </td>
+                <td>Marjorie P Hart</td>
+                <td>1:00 pm</td>
+            </tr>
+            <tr>
+                <td rowspan="2"> 9/15 </td>
+                <td>U2 and U4 </td>
+                <td>North</td>
+                <td>9:30 am</td>
+            </tr>
+            <tr>
+                <td>U3 and U5 </td>
+                <td>AJ Katzenmaier</td>
+                <td>1:00 pm</td>
+            </tr>
+            <tr>
+                <td rowspan="2"> 9/22 </td>
+                <td>U1 and U3 </td>
+                <td>South</td>
+                <td>9:30 am</td>
+            </tr>
+            <tr>
+                <td>U2 and U6 </td>
+                <td>Howard a Yeager</td>
+                <td>1:00 pm</td>
+            </tr>
+            <tr>
+                <td>9/29</td>
+                <td>U4 and U5</td>
+                <td>Greenbay</td>
+                <td>9:30 am</td>
+            </tr>
+        </tbody>
+      </table>
+        </div>
+        <div>
+            <p><b>Facility Type:</b> Outdoor</p>
+            <p><b>Additional Information:</b> If deemed necesary by MDHL games may be shortenerd or cancelled due to extreme weather conditions.</p>
+        </div>
+        <div>
+            <p><b>Please direct all questions to:</b> Michael Randall, League</p>
+            <p><b>Phone:</b> 630)690-8132</p>
+            <p><b>Email:</b> michael.randall@chihockey.org</p>
+        </div>
+    </main>
 </body>
 </html>
