--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <a class="select" href="#">Home</a>
             <a href="./about.html">About MDLH</a>
             <a href="./contact.html">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Information</a>
         </div>
     </nav>
 
