cambios flexbox y  table

--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,9 @@
         </div>
     </nav>
 
-    <main>
-               
-        <div class="contact">
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+    <main class="contact">
+        <div>
+            <p>Please email us at <a class="email" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.
             </p>
        </div> 
