--- a/game_info.html
+++ b/game_info.html
@@ -19,7 +19,7 @@
         <h2>Game Information</h2>
         <div>
             <a href="./index.html">Home</a>
-            <a class="select" href="#">About MDLH</a>
+            <a href="./about.html">About MDLH</a>
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
             <a class="select" href="#">Information</a>
@@ -28,10 +28,9 @@
     
     <main class="game">
         <div>
-            <h2>Mighty Ducks Hockey League</h2>
+            <span>* All games take place on Saturday</span>
             <table>
                 <caption> Fall Schedule</caption>
-                <h3>* All games take place on Saturday</h3>
                 <thead>
                     <tr>
                         <th>SEPTEMBER</th>
@@ -100,8 +99,10 @@
         </div>
         <div>
             <p><b>Please direct all questions to:</b> Michael Randall, League</p>
-            <p><b>Phone:</b> 630)690-8132</p>
-            <p><b>Email:</b> michael.randall@chihockey.org</p>
+            <div class="contact-game">
+                <p><b>Phone:</b> (630) 690-8132</p>
+                <p><b>Email:</b> <a  class="email" href="mailto: michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
+            </div>
         </div>
     </main>
 </body>
