--- a/rules.html
+++ b/rules.html
@@ -15,12 +15,11 @@
     </header>
 
     <nav>
-        
             <h2>Rules of Play & Policies</h2>
             <h6>IHF rules shall govern MDHL play except as modified herein.</h6>
-        <div>
+        <div class="rulesnav">
             <a href="./index.html">Home</a>
-            <a class="select" href="#">About MDLH</a>
+            <a href="./about.html">About MDLH</a>
             <a href="./contact.html">Contact</a>
             <a class="select" href="#">Rules</a>
             <a href="./game_info.html">Information</a>
@@ -42,10 +41,10 @@
             <article>
                 <h3>IHF FIELD REGULATIONS</h3> 
                 <ol>
-                    <li> DIMENSIONS.IHF Law 1 provides for flexible external field dimensions within
+                    <li> <b>DIMENSIONS.</b> IHF Law 1 provides for flexible external field dimensions within
                         a given maximum and minimum width and length. These dimensions should be
                         adhered to for all fields used by teams under 12 and older.</li>
-                    <li> COMPETITION FIELDS. Fields used within the competition program must be
+                    <li> <b>COMPETITION FIELDS.</b> Fields used within the competition program must be
                         a minimum of 100 x 60 yards.Leagues, districts or associations participating in
                         the state competition program that are unable to provide a field that meets these
                         minimum requirements must advise the State Competition Board which will
@@ -53,27 +52,30 @@
                         whether or not a waiver of the minimum dimensions should be granted. Teams
                         from leagues, districts or associations that are unable to provide an acceptable
                         field may be required to play all their games away.</li>
-                    <li> FIELDS USED BY YOUNG AGE GROUPS
-                        a. U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
-                        for older age groups should be progressively larger.
-                        b. U-8 plays on a field 40-50 yards in length and 20-30 yards width.
-                        c. U-10 play on a field 70-80 yards in length and 40-50 yards in width.
-                        d. In addition, fields used by young age groups may have their internal
-                        dimensions and size of goal similarly modified.</li>
+                    <li> <b>FIELDS USED BY YOUNG AGE GROUPS</b> 
+                        <ul>
+                            <li>a. U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
+                                for older age groups should be progressively larger.</li>
+                            <li>b. U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
+                            <li>c. U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
+                            <li>d. In addition, fields used by young age groups may have their internal
+                                dimensions and size of goal similarly modified.</li>
+                        </ul>
+                    </li>
                 </ol>
             </article>
 
             <article>
                 <h3>ALL-PLAY</h3>
-                <p>All-play means that every recreation player on every team shall play atleast
+                <ul>All-play means that every recreation player on every team shall play atleast
                     fifty percent of each game. Coaches in the competition program are encouraged
                     to play their players 50% of each game.
-                    o A Coach shall be permitted to not play a player 50% of each game
-                    under special circumstances, e.g., unexcused absences from practice
-                    and/or games, ungentlemanly conduct at practice and/or games, and
-                    injuries.
-                    </p>
-            </article>
+                    <li> A Coach shall be permitted to not play a player 50% of each game
+                        under special circumstances, e.g., unexcused absences from practice
+                        and/or games, ungentlemanly conduct at practice and/or games, and
+                        injuries.</li>
+                </ul>
+           </article>
         </div>
     </main>
 </body>
