--- a/rules.html
+++ b/rules.html
@@ -67,14 +67,15 @@
 
             <article>
                 <h3>ALL-PLAY</h3>
-                <ul>All-play means that every recreation player on every team shall play atleast
-                    fifty percent of each game. Coaches in the competition program are encouraged
-                    to play their players 50% of each game.
-                    <li> A Coach shall be permitted to not play a player 50% of each game
-                        under special circumstances, e.g., unexcused absences from practice
-                        and/or games, ungentlemanly conduct at practice and/or games, and
-                        injuries.</li>
-                </ul>
+                    <p>All-play means that every recreation player on every team shall play atleast
+                        fifty percent of each game. Coaches in the competition program are encouraged
+                        to play their players 50% of each game.</p>
+                        <ul>
+                            <li> A Coach shall be permitted to not play a player 50% of each game
+                                under special circumstances, e.g., unexcused absences from practice
+                                and/or games, ungentlemanly conduct at practice and/or games, and
+                                injuries.</li>
+                        </ul>
            </article>
         </div>
     </main>
