html de registration

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
             <a class="select" href="#">Contact</a>
             <a href="./rules.html">Rules</a>
             <a href="./game_info.html">Information</a>
+            <a href="./registration.html">Registration</a>
         </div>
     </nav>
 
