--- a/game_info.html
+++ b/game_info.html
@@ -24,6 +24,7 @@
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
             <a class="select" href="#">Information</a>
+            <a href="./registration.html">Registration</a>
         </div>
     </nav>
     
