--- a/rules.html
+++ b/rules.html
@@ -24,6 +24,7 @@
             <a href="./contact.html">Contact</a>
             <a class="select" href="#">Rules</a>
             <a href="./game_info.html">Information</a>
+            <a href="./registration.html">Registration</a>
         </div>
     </nav>
 
