--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
             <a href="./game_info.html">Information</a>
+            <a href="./registration.html">Registration</a>
         </div>
     </nav>
 
