--- a/game_info.html
+++ b/game_info.html
@@ -102,7 +102,7 @@
         <div>
             <p><b>Please direct all questions to:</b> Michael Randall, League</p>
             <div class="contact-game">
-                <p><b>Phone:</b> (630) 690-8132</p>
+                <p><b>Phone:</b> <a class="email" href="tel:+6306908132">(630) 690-8132</a></p>
                 <p><b>Email:</b><a class="email" href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
             </div>
         </div>
