--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Mighty Ducks Hockey League </title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open%20Sans">
 </head>
 <body>
     <header>
