--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <title>Mighty Ducks Hockey League </title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
      <link rel="stylesheet" href="./css/style.css"> 
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
-</head>
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open%20Sans">
+    </head>
 <body>
     <header>
         <img src="./imagenes/Logo_Mighty_ducks-01.png" alt="logo Mighty Ducks Hockey League" width="100">
