--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League </title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+    <link rel="stylesheet" href="./css/style3.css">
 </head>
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
+        <h2>Contact</h2>
         <img src="./imagenes/Logo_Mighty_ducks-01.png" alt="logo Mighty Ducks Hockey League" width="100">
     </header>
 
@@ -17,20 +21,20 @@
         <div>
             <a href="./index.html">Home</a>
             <a href="./about.html">About MDLH</a>
-            <a href="#">contact</a>
+            <a class="select" href="#">Contact</a>
         </div>
     </nav>
 
     <main>
-        <figure>
-            <img src="./imagenes/hockey_3.jpg" alt="imagen de dos niños jugando hockey" width="200">
-        </figure>
-        
-        <div>
+               
+        <div class="contact">
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.
             </p>
-       </div>      
+       </div> 
+       <figure>
+        <img src="./imagenes/hockey_3.jpg" alt="imagen de dos niños jugando hockey" width="200">
+    </figure>     
     </main>
 </body>
 </html>
