--- a/contact.html
+++ b/contact.html
@@ -6,29 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League </title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
-    <link rel="stylesheet" href="./css/style3.css">
+     <link rel="stylesheet" href="./css/style.css"> 
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 </head>
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <h2>Contact</h2>
         <img src="./imagenes/Logo_Mighty_ducks-01.png" alt="logo Mighty Ducks Hockey League" width="100">
     </header>
 
     <nav>
+        <h2>Contact</h2>
         <div>
             <a href="./index.html">Home</a>
             <a href="./about.html">About MDLH</a>
             <a class="select" href="#">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Information</a>
         </div>
     </nav>
 
-    <main>
-               
-        <div class="contact">
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+    <main class="contact">
+        <div>
+            <p>Please email us at <a class="email" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.
             </p>
        </div> 
