--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League </title>
     <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="./css/style.css">  -->
-   <!--  <link rel="stylesheet" href="./css/style2.css"> -->
-    <link rel="stylesheet" href="./css/style3.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 
 </head>
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <h2>Upcoming Events</h2>
         <img src="./imagenes/Logo_Mighty_ducks-01.png" alt="logo Mighty Ducks Hockey League" width="100">
     </header>
 
     <nav>
+        <h2>Upcoming Events</h2>
+        
         <div>
             <a class="select" href="#">Home</a>
             <a href="./about.html">About MDLH</a>
             <a href="./contact.html">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Information</a>
         </div>
     </nav>
 
